@@ -339,18 +339,21 @@ void ThreadedCompositor::requestDisplayRefreshMonitorUpdate()
 
 void ThreadedCompositor::handleDisplayRefreshMonitorUpdate(bool hasBeenRescheduled)
 {
-    // Retrieve coordinateUpdateCompletionWithClient.
+    // Retrieve the clientRendersNextFrame and coordinateUpdateCompletionWithClient.
+    bool clientRendersNextFrame { false };
     bool coordinateUpdateCompletionWithClient { false };
     {
         LockHolder locker(m_attributes.lock);
+        clientRendersNextFrame = std::exchange(m_attributes.clientRendersNextFrame, false);
         coordinateUpdateCompletionWithClient = std::exchange(m_attributes.coordinateUpdateCompletionWithClient, false);
     }
 
-    // The client is finally notified about the scene update nearing completion. The client will use this
-    // opportunity to clean up resources as appropriate. It can also perform any layer flush that was
-    // requested during the composition, or by any DisplayRefreshMonitor notifications that have been
-    // handled at this point.
-    m_client.renderNextFrame();
+    // If clientRendersNextFrame is true, the client is finally notified about the scene update nearing
+    // completion. The client will use this opportunity to clean up resources as appropriate. It can also
+    // perform any layer flush that was requested during the composition, or by any DisplayRefreshMonitor
+    // notifications that have been handled at this point.
+    if (clientRendersNextFrame)
+        m_client.renderNextFrame();
 
     LockHolder stateLocker(m_compositingRunLoop->stateLock());
 
